// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TaskList > Renders completed tasks correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-4 text-center text-muted-foreground font-medium"
      >
        Hurray, no pending tasks
      </div>
      <div
        class="mt-4"
        data-slot="collapsible"
        data-state="closed"
      >
        <button
          aria-controls="radix-«r2»"
          aria-expanded="false"
          class="items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full flex flex-row"
          data-slot="collapsible-trigger"
          data-state="closed"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
           Add new task
        </button>
        <div
          class="mt-4"
          data-slot="collapsible-content"
          data-state="closed"
          hidden=""
          id="radix-«r2»"
          style=""
        />
      </div>
      <div
        data-slot="collapsible"
        data-state="open"
      >
        <div
          aria-controls="radix-«r3»"
          aria-expanded="true"
          class="w-full flex flex-row"
          data-slot="collapsible-trigger"
          data-state="open"
          type="button"
        >
          <h2
            class="font-semibold text-xl"
          >
            Completed tasks
          </h2>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevrons-up-down ml-auto"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 15 5 5 5-5"
            />
            <path
              d="m7 9 5-5 5 5"
            />
          </svg>
        </div>
        <div
          class="pt-4"
          data-slot="collapsible-content"
          data-state="open"
          id="radix-«r3»"
          style=""
        >
          <div
            class="rounded-md border"
          >
            <div
              class="relative w-full overflow-x-auto"
              data-slot="table-container"
            >
              <table
                class="w-full caption-bottom text-sm"
                data-slot="table"
              >
                <thead
                  class="[&_tr]:border-b"
                  data-slot="table-header"
                >
                  <tr
                    class="hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors"
                    data-slot="table-row"
                  >
                    <th
                      class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-16"
                      data-slot="table-head"
                    />
                    <th
                      class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                      data-slot="table-head"
                    >
                      Title
                    </th>
                    <th
                      class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-64"
                      data-slot="table-head"
                    >
                      Deadline
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="[&_tr:last-child]:border-0"
                  data-slot="table-body"
                >
                  <tr
                    class="hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors"
                    data-slot="table-row"
                    data-state="false"
                  >
                    <td
                      class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                      data-slot="table-cell"
                    >
                      <button
                        aria-checked="true"
                        class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
                        data-slot="checkbox"
                        data-state="checked"
                        role="checkbox"
                        type="button"
                        value="on"
                      >
                        <span
                          class="flex items-center justify-center text-current transition-none"
                          data-slot="checkbox-indicator"
                          data-state="checked"
                          style="pointer-events: none;"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-check size-3.5"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M20 6 9 17l-5-5"
                            />
                          </svg>
                        </span>
                      </button>
                    </td>
                    <td
                      class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                      data-slot="table-cell"
                    >
                      test
                    </td>
                    <td
                      class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                      data-slot="table-cell"
                    >
                      2/1/2025
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-4 text-center text-muted-foreground font-medium"
    >
      Hurray, no pending tasks
    </div>
    <div
      class="mt-4"
      data-slot="collapsible"
      data-state="closed"
    >
      <button
        aria-controls="radix-«r2»"
        aria-expanded="false"
        class="items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full flex flex-row"
        data-slot="collapsible-trigger"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
         Add new task
      </button>
      <div
        class="mt-4"
        data-slot="collapsible-content"
        data-state="closed"
        hidden=""
        id="radix-«r2»"
        style=""
      />
    </div>
    <div
      data-slot="collapsible"
      data-state="open"
    >
      <div
        aria-controls="radix-«r3»"
        aria-expanded="true"
        class="w-full flex flex-row"
        data-slot="collapsible-trigger"
        data-state="open"
        type="button"
      >
        <h2
          class="font-semibold text-xl"
        >
          Completed tasks
        </h2>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-auto"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </div>
      <div
        class="pt-4"
        data-slot="collapsible-content"
        data-state="open"
        id="radix-«r3»"
        style=""
      >
        <div
          class="rounded-md border"
        >
          <div
            class="relative w-full overflow-x-auto"
            data-slot="table-container"
          >
            <table
              class="w-full caption-bottom text-sm"
              data-slot="table"
            >
              <thead
                class="[&_tr]:border-b"
                data-slot="table-header"
              >
                <tr
                  class="hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors"
                  data-slot="table-row"
                >
                  <th
                    class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-16"
                    data-slot="table-head"
                  />
                  <th
                    class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                    data-slot="table-head"
                  >
                    Title
                  </th>
                  <th
                    class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-64"
                    data-slot="table-head"
                  >
                    Deadline
                  </th>
                </tr>
              </thead>
              <tbody
                class="[&_tr:last-child]:border-0"
                data-slot="table-body"
              >
                <tr
                  class="hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors"
                  data-slot="table-row"
                  data-state="false"
                >
                  <td
                    class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                    data-slot="table-cell"
                  >
                    <button
                      aria-checked="true"
                      class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
                      data-slot="checkbox"
                      data-state="checked"
                      role="checkbox"
                      type="button"
                      value="on"
                    >
                      <span
                        class="flex items-center justify-center text-current transition-none"
                        data-slot="checkbox-indicator"
                        data-state="checked"
                        style="pointer-events: none;"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-check size-3.5"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </button>
                  </td>
                  <td
                    class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                    data-slot="table-cell"
                  >
                    test
                  </td>
                  <td
                    class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                    data-slot="table-cell"
                  >
                    2/1/2025
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TaskList > Renders pending tasks correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rounded-md border"
      >
        <div
          class="relative w-full overflow-x-auto"
          data-slot="table-container"
        >
          <table
            class="w-full caption-bottom text-sm"
            data-slot="table"
          >
            <thead
              class="[&_tr]:border-b"
              data-slot="table-header"
            >
              <tr
                class="hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors"
                data-slot="table-row"
              >
                <th
                  class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-16"
                  data-slot="table-head"
                />
                <th
                  class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  data-slot="table-head"
                >
                  Title
                </th>
                <th
                  class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-64"
                  data-slot="table-head"
                >
                  Deadline
                </th>
              </tr>
            </thead>
            <tbody
              class="[&_tr:last-child]:border-0"
              data-slot="table-body"
            >
              <tr
                class="hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors"
                data-slot="table-row"
                data-state="false"
              >
                <td
                  class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  data-slot="table-cell"
                >
                  <button
                    aria-checked="false"
                    class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
                    data-slot="checkbox"
                    data-state="unchecked"
                    role="checkbox"
                    type="button"
                    value="on"
                  />
                </td>
                <td
                  class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  data-slot="table-cell"
                >
                  test
                </td>
                <td
                  class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                  data-slot="table-cell"
                >
                  2/1/2025
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="mt-4"
        data-slot="collapsible"
        data-state="closed"
      >
        <button
          aria-controls="radix-«r0»"
          aria-expanded="false"
          class="items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full flex flex-row"
          data-slot="collapsible-trigger"
          data-state="closed"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
           Add new task
        </button>
        <div
          class="mt-4"
          data-slot="collapsible-content"
          data-state="closed"
          hidden=""
          id="radix-«r0»"
          style=""
        />
      </div>
      <div
        data-slot="collapsible"
        data-state="closed"
      >
        <div
          aria-controls="radix-«r1»"
          aria-expanded="false"
          class="w-full flex flex-row"
          data-slot="collapsible-trigger"
          data-state="closed"
          type="button"
        >
          <h2
            class="font-semibold text-xl"
          >
            Completed tasks
          </h2>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevrons-up-down ml-auto"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 15 5 5 5-5"
            />
            <path
              d="m7 9 5-5 5 5"
            />
          </svg>
        </div>
        <div
          class="pt-4"
          data-slot="collapsible-content"
          data-state="closed"
          hidden=""
          id="radix-«r1»"
          style=""
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rounded-md border"
    >
      <div
        class="relative w-full overflow-x-auto"
        data-slot="table-container"
      >
        <table
          class="w-full caption-bottom text-sm"
          data-slot="table"
        >
          <thead
            class="[&_tr]:border-b"
            data-slot="table-header"
          >
            <tr
              class="hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors"
              data-slot="table-row"
            >
              <th
                class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-16"
                data-slot="table-head"
              />
              <th
                class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                data-slot="table-head"
              >
                Title
              </th>
              <th
                class="text-foreground h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-64"
                data-slot="table-head"
              >
                Deadline
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
            data-slot="table-body"
          >
            <tr
              class="hover:bg-muted/50 data-[state=selected]:bg-muted border-b transition-colors"
              data-slot="table-row"
              data-state="false"
            >
              <td
                class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                data-slot="table-cell"
              >
                <button
                  aria-checked="false"
                  class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
                  data-slot="checkbox"
                  data-state="unchecked"
                  role="checkbox"
                  type="button"
                  value="on"
                />
              </td>
              <td
                class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                data-slot="table-cell"
              >
                test
              </td>
              <td
                class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                data-slot="table-cell"
              >
                2/1/2025
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="mt-4"
      data-slot="collapsible"
      data-state="closed"
    >
      <button
        aria-controls="radix-«r0»"
        aria-expanded="false"
        class="items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full flex flex-row"
        data-slot="collapsible-trigger"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
         Add new task
      </button>
      <div
        class="mt-4"
        data-slot="collapsible-content"
        data-state="closed"
        hidden=""
        id="radix-«r0»"
        style=""
      />
    </div>
    <div
      data-slot="collapsible"
      data-state="closed"
    >
      <div
        aria-controls="radix-«r1»"
        aria-expanded="false"
        class="w-full flex flex-row"
        data-slot="collapsible-trigger"
        data-state="closed"
        type="button"
      >
        <h2
          class="font-semibold text-xl"
        >
          Completed tasks
        </h2>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-auto"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </div>
      <div
        class="pt-4"
        data-slot="collapsible-content"
        data-state="closed"
        hidden=""
        id="radix-«r1»"
        style=""
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
